# baranium

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build_run_compiler.sh  build_run_runtime.sh  version.h
.github/workflows/: build.yml
Compiler/: CMakeLists.txt  Makefile  build_run.sh
Compiler/include/: argument_parser.h
Compiler/src/: ArgumentParser.cpp  ArgumentParser.h  BgeFile.hpp  FileUtil.cpp  FileUtil.h  Logging.cpp  Logging.h  MemoryManager.cpp  MemoryManager.h  Preprocessor.cpp  Preprocessor.h  Source.cpp  Source.h  SourceToken.cpp  SourceToken.h  StringUtil.cpp  StringUtil.h  TokenParser.cpp  TokenParser.h  main.c  main.cpp
Compiler/src/Binaries/: CodeBuilder.cpp  CodeBuilder.h  CompiledScript.cpp  CompiledScript.h  Compiler.cpp  Compiler.h  NameLookupTable.cpp  NameLookupTable.h  Section.h  VariableTable.cpp  VariableTable.h
Compiler/src/Language/: AST_TokenParser.cpp  AST_TokenParsers.h  AbstractSyntaxTree.cpp  AbstractSyntaxTree.h  Expression.cpp  Expression.h  Field.cpp  Field.h  Function.cpp  Function.h  GenericTypeHolder.h  IfElseStatement.cpp  IfElseStatement.h  Language.cpp  Language.h  Loop.cpp  Loop.h  Token.cpp  Token.h  Types.h  Variable.cpp  Variable.h
Compiler/test/: CustomScript01.bgs  CustomScript02.bgs  Library1.bgs  Library2.bgs  main.bgs  math.ib  stdio.ib
ProjectManager/: CMakeLists.txt
ProjectManager/include/: commands.h  config.h  operations.h  toml.h  util.h
ProjectManager/src/: config.c  main.c  operations.c  util.c
ProjectManager/src/cmd/: build.c  config.c  create.c  defines.c  help.c  install.c  lib.c  run.c
Runtime/: CMakeLists.txt  Makefile  build_run.sh
Runtime/include/baranium/: bcpu.h  callback.h  defines.h  field.h  file_util.h  function.h  library.h  logging.h  runtime.h  script.h  string_util.h  variable.h  version.h
Runtime/include/baranium/backend/: bfuncmgr.h  bvarmgr.h  dynlibloader.h  errors.h  varmath.h
Runtime/include/baranium/compiler/: compiler_context.h  preprocessor.h  source.h  source_token.h  token_parser.h
Runtime/include/baranium/compiler/binaries/: compiler.h  symbol_table.h
Runtime/include/baranium/compiler/language/: abstract_syntax_tree.h  expression_token.h  field_token.h  function_token.h  if_else_token.h  language.h  loop_token.h  token.h  variable_token.h
Runtime/include/baranium/cpu/: bbus.h  bcpu_opcodes.h  bstack.h
Runtime/src/: test.c
Runtime/src/baranium/: bcpu.c  callback.c  field.c  file_util.c  function.c  library.c  logging.c  runtime.c  script.c  string_util.c  variable.c
Runtime/src/baranium/backend/: bfuncmgr.c  bvarmgr.c  dynlibloader.c  varmath.c
Runtime/src/baranium/compiler/: compiler_context.c  preprocessor.c  source.c  source_token.c  token_parser.c
Runtime/src/baranium/compiler/binaries/: compiler.c  symbol_table.c
Runtime/src/baranium/compiler/language/: abstract_syntax_tree.c  expression_token.c  field_token.c  function_token.c  if_else_token.c  language.c  loop_token.c  token.c  variable_token.c
Runtime/src/baranium/cpu/: bbus.c  bcpu_opcodes.c  bstack.c  instructions.c
RuntimeExecutable/: CMakeLists.txt  build_run.sh
RuntimeExecutable/include/: argument_parser.h
RuntimeExecutable/src/: argument_parser.c  callbacks.c  main.c
examples/: CustomScript01.bgs  CustomScript02.bgs  Library0.bgs  Library3.bgs  fibanocci.bgs  main.bgs
include/: BgeFile.hpp
stdlib/: debugging.ib  math.ib  stdio.ib  stdlib.ib
